--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
