--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/material-bottom-tabs": "^5.1.6",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.7",
+    "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-star-rating": "^1.1.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-status-bar-height": "^2.5.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
