--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "^0.28.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^3.6.0",
@@ -30,7 +31,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-video": "^4.4.5"
+    "react-native-video": "^4.4.5",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
